--- a/vipd3m-bulk.css
+++ b/vipd3m-bulk.css
@@ -218,3 +218,107 @@ display: none;
 .mainfeatures .sep {
     height: 0;
 }
+/* CDN 20DEV */
+.rcon {
+  color: #333;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+
+.title {
+  font-size: 1.5em;
+  margin-bottom: 1em;
+}
+
+.rcon p {
+  line-height: 1.6;
+  margin-bottom: 1em;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.fldscon {
+  margin-top: 20px;
+}
+
+.perfldcon {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.checkboxcon {
+  cursor: pointer;
+}
+
+.name {
+  margin-left: 8px;
+}
+
+#addToCartWithFldsBtn {
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+  border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .rcon {
+    padding: 10px;
+  }
+
+  .title {
+    font-size: 1.2em;
+  }
+
+  .perfldcon {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .name {
+    margin-left: 0;
+    margin-top: 8px;
+  }
+
+  #addToCartWithFldsBtn {
+    width: 100%;
+    padding: 15px 0;
+  }
+}
+
+
+.content.mainshowproduct .rshowcon .right .addtocartcon .counter {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  margin-bottom: 26px;
+}
+
+.content.mainshowproduct .rshowcon .right .addtocartcon .counter .rcounter {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  width: 100%;
+  text-align: center;
+  align-items: center;
+  color: #fff;
+  background-color: #17171d !important;
+}
+
+.content.mainshowproduct .rshowcon .right .addtocartcon .counter::before {
+  content: "الكمية";
+  color: #fff;
+  align-self: flex-start; 
+  width: 100%;
+  text-align: center; 
+  background: #17171d;
+}
